Minimal, working website

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,24 +3,19 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>About</h2>
-        <hr class="star-light">
+        <h2>About (UPDATE ME)</h2>
+        <hr class="short-rule">
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+      <!-- Column for Headshot -->
+      <div class="col-lg-4 col-lg-offset-1 text-center">
+        <img src="img/about/headshot.png" alt="Joshua J. Hamilton" class="img-responsive img-circle" style="max-width: 100%;">
       </div>
-      <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-      </div>
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
-        </a>
+      <!-- Column for Bio -->
+      <div class="col-lg-6">
+        <p>Hello! I'm Joshua J. Hamilton, PhD, a bioinformatics consultant specializing in preclinical biotech startups. I provide services ranging from infrastructure deployment and pipeline development to data analysis and algorithm design. My research background in microbial genomics and the microbiome enables me to deliver deep insights into complex biological data.</p>
+        <p>With a passion for solving challenging problems in bioinformatics, I aim to empower startups with the tools and expertise they need to succeed in their research and development efforts.</p>
       </div>
     </div>
   </div>
