--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
-{% include head.html %}
+{% include meta.html %}
 
 <body id="page-top" class="index">
-  {% include nav.html %}
   {% include header.html %}
-  {% include portfolio_grid.html %}
-  {% include about.html %}
+  {% include trophicnexus.html %}
 
-  {% if site.contact == "static" %}
-  {% include contact_static.html %}
-  {% elsif site.contact == "disqus" %}
-  {% include contact_disqus.html %}
-  {% else %}
+  {% include about.html %}
+  {% include services.html %}
   {% include contact.html %}
-  {% endif %}
 
   {% include footer.html %}
-  {% include modals.html %}
+  {% include service-modals.html %}
   {% include js.html %}
 </body>
 
