--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,16 +2,16 @@
 <footer class="text-center">
   <div class="footer-above">
     <div class="container">
-      <div class="row">
-        <div class="footer-col col-md-4">
-          <h3>{{ site.footer.location }}</h3>
+      <div class="row justify-content-around">
+        <div class="footer-col col-md-6">
+          <h3>{{ site.footer.contact }}</h3>
           <p>
-            {% for adress in site.address %}
-            {{ adress.line }} <br>
+            {% for contact in site.contact %}
+            {{ contact.line }} <br>
             {% endfor %}
           </p>
         </div>
-        <div class="footer-col col-md-4">
+        <div class="footer-col col-md-6">
           <h3>{{ site.footer.social }}</h3>
           <ul class="list-inline">
             {% for network in site.social %}
@@ -21,10 +21,6 @@
             </li>
             {% endfor %}
           </ul>
-        </div>
-        <div class="footer-col col-md-4">
-          <h3>{{ site.footer.credits }}</h3>
-          <p>{{ site.credits }}</p>
         </div>
       </div>
     </div>
