--- a/_includes/trophicnexus.html
+++ b/_includes/trophicnexus.html
@@ -8,8 +8,8 @@
           <p></p>
           <span class="name"><em>Nexus</em>: a connection or link between things</span>
           <p></p>
-          <span class="name">
-            [Something about filling an empty niche] A nod to my background in microbial ecology, the name Trophic Nexus reflects my ability to connect different disciplines and areas of expertise through the lens of bioinformatics.
+          <span class="name non-centered">
+            A nod to my background in microbial ecology, the name Trophic Nexus reflects my ability to connect different disciplines and areas of expertise through the lens of bioinformatics. With an array of bioinformatics services, I am confident I can fill the niche your data team needs to thrive.
           </span>
         </div>
       </div>
