--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>About (UPDATE ME)</h2>
+        <h2>About</h2>
         <hr class="short-rule">
       </div>
     </div>
@@ -14,8 +14,9 @@
       </div>
       <!-- Column for Bio -->
       <div class="col-lg-6">
-        <p>Hello! I'm Joshua J. Hamilton, PhD, a bioinformatics consultant specializing in preclinical biotech startups. I provide services ranging from infrastructure deployment and pipeline development to data analysis and algorithm design. My research background in microbial genomics and the microbiome enables me to deliver deep insights into complex biological data.</p>
-        <p>With a passion for solving challenging problems in bioinformatics, I aim to empower startups with the tools and expertise they need to succeed in their research and development efforts.</p>
+        <p> I'm Josh Hamilton, PhD, a bioinformatics consultant with a passion for empowering biotech startups to tackle their most complex data challenges. With a strong foundation in microbial genomics and microbiome research, I bring deep expertise in developing and optimizing bioinformatics pipelines, building scalable infrastructure, and applying advanced computational methods to analyze complex biological datases.</p>
+
+        <p>I believe that effective communication and education are just as critical as technical solutions, and I take pride in helping teams of all backgrounds unlock the full potential of their data. I thrive on training and mentoring teams, and building bridges across disciplines. Whether you need infrastructure deployment, algorithm design, or strategic guidance, I'm here to help your team succeed. Let's connect and explore how I can support your goals.</p>
       </div>
     </div>
   </div>
