--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,7 @@
       </div>
       <!-- Column for Bio -->
       <div class="col-lg-6">
-        <p> I'm Josh Hamilton, PhD, a bioinformatics consultant with a passion for empowering biotech startups to tackle their most complex data challenges. With a strong foundation in microbial genomics and microbiome research, I bring deep expertise in developing and optimizing bioinformatics pipelines, building scalable infrastructure, and applying advanced computational methods to analyze complex biological datases.</p>
+        <p> I'm Josh Hamilton, PhD, a bioinformatics consultant with a passion for empowering biotech startups to tackle their most complex data challenges. With a strong foundation in microbial genomics and microbiome research, I bring deep expertise in developing and optimizing bioinformatics pipelines, building scalable infrastructure, and applying advanced computational methods to analyze complex biological databases.</p>
 
         <p>I believe that effective communication and education are just as critical as technical solutions, and I take pride in helping teams of all backgrounds unlock the full potential of their data. I thrive on training and mentoring teams, and building bridges across disciplines. Whether you need infrastructure deployment, algorithm design, or strategic guidance, I'm here to help your team succeed. Let's connect and explore how I can support your goals.</p>
       </div>
